--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,39 +1,48 @@
 .container {
-  text-align: center;
-}
-
-.logo {
-  height: 40vmin;
-  pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background-color: white;
 }
 
 .header {
-  min-height: 100vh;
+  height: 70px;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  margin: 0 5vw;
+}
+ 
+.content {
+  flex: 1;
+  display: flex;
+}
+
+.description {
+  flex: 1;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
 }
 
-.link {
-  color: rgb(112, 76, 182);
+.illustration {
+  flex: 1;
+  position: relative;
+  margin: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .logo {
-    animation: logo-float infinite 3s ease-in-out;
-  }
+.logo {
+  display: flex;
+  align-items: center;
 }
 
-@keyframes logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.name {
+  margin-left: 10px;
+}
+
+.banner {
+  text-transform: uppercase;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: larger;
 }
