initial configurations & common header

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,3 +14,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+#mainHeader {
+  height: 60px;
+}
+
+#mainHeader + #mainContainer {
+  height: calc(100vh - 60px);
+}
+
+#mainContainer {
+  height: 100vh;
+}
