FlowBuilder :: Open right panel with onClick

--- a/src/components/StageCard/StageCard.module.scss
+++ b/src/components/StageCard/StageCard.module.scss
@@ -1,6 +1,7 @@
 .container{
     height: 150px;
     width: 420px;
+    cursor: pointer;
     .card {
         border-top-width: 10px;
         border-top-style: solid;
