--- a/src/styles/FlowBuilder.module.scss
+++ b/src/styles/FlowBuilder.module.scss
@@ -49,3 +49,16 @@
     margin: 14px;
   }
 }
+
+.rightPanel {
+  padding: 4px 0;
+  .title {
+    margin-left: 14px;
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  hr {
+    margin: 14px;
+  }
+}
