--- a/src/styles/Flows.module.scss
+++ b/src/styles/Flows.module.scss
@@ -1,10 +1,57 @@
-.leftPanel {
-    width: 300px;
-    height: 300px;
-    flex-grow: 0;
-}
+
 .mainDiv {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    .leftPanel {
+        width: 350px;
+        height: 100%;
+        box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.7), 0px 20px 30px rgba(0, 0, 0, 0.3), 0px 10px 50px rgba(0, 0, 0, 0.2);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 8px;
+        .createButton {
+            width: 100%;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            margin-top: 10px;
+            .text{
+                font-style: normal;
+                font-weight: bold;
+                font-size: 20px;
+            }
+        }
+        .rule {
+            padding: 0px;
+        }
+        .itemList {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            .item {
+                margin-bottom: 5px;
+                width: 100%;
+                height: 50px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                .text{
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 16px;
+                }
+            }
+        }
+    }
+}
+
+.euiButton__text {
+    width: 100%;
 }
