FlowsPage : Listing flow elements and checkbox

--- a/src/styles/Flows.module.scss
+++ b/src/styles/Flows.module.scss
@@ -50,6 +50,35 @@
             }
         }
     }
+    .flowList{
+        width: 100%;
+        padding: 10px;
+        .cardContainer {
+            height: 44px;
+            background: #FFFFFF;
+            box-shadow: 0px 0.9px 4px -1px rgba(0, 0, 0, 0.08), 0px 2.6px 8px -1px rgba(0, 0, 0, 0.06), 0px 5.7px 12px -1px rgba(0, 0, 0, 0.05), 0px 15px 15px -1px rgba(0, 0, 0, 0.04);
+            border-radius: 6px;
+            margin: 10px;
+            .flowCard {
+                display: flex;
+                align-items: center;
+                padding: 0 20px;
+                gap: 10px;
+                .flowTitle {
+                    align-items: center;
+                    font-size: 18px;
+                    .description {
+                        font-size: 12px;
+                    }
+                }
+                .details {
+                    display: flex;
+                    gap: 10px;
+                    font-size: 12px;
+                }
+            }
+        }
+    }
 }
 
 .euiButton__text {
