--- a/src/styles/FormBuilder.module.scss
+++ b/src/styles/FormBuilder.module.scss
@@ -12,8 +12,7 @@
     }
 }
 .card{
-    height: 180px;
-    width: 380px;
+    width: 460px;
     display: flex;
     justify-content: center;
     align-items: left;
@@ -23,7 +22,11 @@
 	.returnToFlow{
 		padding: 14px;
 		margin: 14px;
-  	}
+  }
+  
+  .titleTextField{
+		margin: 14px;
+  }
 }
 
 .container {
