--- a/src/components/FlowBuilder/ConditionElement/Condition.module.scss
+++ b/src/components/FlowBuilder/ConditionElement/Condition.module.scss
@@ -3,7 +3,7 @@
   background-size: auto cover;
   background-position: bottom;
   background-repeat: no-repeat;
-  height: 100px;
+  min-height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
