--- a/src/components/FlowBuilder/Main/Main.module.scss
+++ b/src/components/FlowBuilder/Main/Main.module.scss
@@ -30,12 +30,12 @@
     background-size: auto cover;
     background-position: bottom;
     background-repeat: no-repeat;
-    height: 50px;
+    min-height: 50px;
     width: 50px;
   }
 
   .newStage {
-    height: 60px;
+    min-height: 60px;
     width: 420px;
     background-color: white;
     display: flex;
