FlowBuilder :: Editable title without api

--- a/src/components/FlowBuilder/Header/Header.module.scss
+++ b/src/components/FlowBuilder/Header/Header.module.scss
@@ -6,6 +6,10 @@
     align-items: center;
     font-size: 20px;
     font-weight: bold;
+
+    .input {
+      font-size: 20px;
+    }
   
     .settingsIcon {
       margin-left: 10px;
