--- a/src/components/TestBuilder/Header/Header.module.scss
+++ b/src/components/TestBuilder/Header/Header.module.scss
@@ -7,7 +7,11 @@
     font-size: 20px;
     font-weight: bold;
 
-    .settingsIcon {
+    .input {
+        font-size: 20px;
+      }
+    
+      .settingsIcon {
         margin-left: 10px;
-    }
+      }
 }
