--- a/src/styles/FormBuilder.module.scss
+++ b/src/styles/FormBuilder.module.scss
@@ -11,22 +11,14 @@
       margin-left: 10px;
     }
 }
-.card{
-    width: 460px;
-    display: flex;
-    justify-content: center;
-    align-items: left;
-    font-size: 20px;
-    font-weight: bold;
 
-	.returnToFlow{
-		padding: 14px;
-		margin: 14px;
-  }
-  
-  .titleTextField{
-		margin: 14px;
-  }
+.returnToFlow{
+  padding: 14px;
+  margin: 14px;
+  position: absolute;
+  float: right;
+  right: 25%;
+  bottom: 0;
 }
 
 .container {
@@ -46,6 +38,7 @@
     flex-direction: column;
     align-items: center;
     height: calc(100% - 60px);
+    overflow: auto;
   
     .addFormButton {
 		min-width: 320px;
