--- a/src/styles/TestBuilder.module.scss
+++ b/src/styles/TestBuilder.module.scss
@@ -7,4 +7,29 @@
     top: 120px;
     height: calc(100% - 120px);
     padding: 4px 0;
-  }
+}
+
+.returnToFlow {
+    padding: 14px;
+    margin: 14px;
+    position: absolute;
+    float: right;
+    right: 25%;
+    bottom: 0;
+}
+
+.openButton {
+    position: absolute;
+    top: 150px;
+}
+
+.content {
+    flex-direction: column;
+    align-items: center;
+    height: calc(100% - 60px);
+    overflow: auto;
+}
+
+.code {
+    width: 50%;
+}
