--- a/src/components/FlowBuilder/StageCard/StageCard.module.scss
+++ b/src/components/FlowBuilder/StageCard/StageCard.module.scss
@@ -25,4 +25,11 @@
         height: 30px;
         width: 30px;
     }
+    .deleteIcon {
+        position: absolute;
+        top: 40px;
+        right: -40px;
+        height: 30px;
+        width: 30px;
+    }
 }
