--- a/src/components/TestBuilder/TestContent/TestContent.module.scss
+++ b/src/components/TestBuilder/TestContent/TestContent.module.scss
@@ -45,8 +45,9 @@
     .countdown {
         right: 10px;
         top: 10px;
-        position: absolute;
+        position: fixed;
         padding: 10px;
+        z-index: 10000;
     }
 }
 .fullScreen {
