--- a/src/components/CodeEditor/CodeEditor.module.scss
+++ b/src/components/CodeEditor/CodeEditor.module.scss
@@ -39,4 +39,11 @@
     .runButton {
         float: right
     }
+
+    .footer {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
