--- a/src/components/DisabledPage/DisabledPage.module.scss
+++ b/src/components/DisabledPage/DisabledPage.module.scss
@@ -1,9 +1,10 @@
 .mainContainer{
-    padding: 30px 0;
     overflow-y: auto;
-    display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    height: calc(100%);
+    
     .disableDiv{
         background-color: lightgray;
         z-index: 10;
@@ -14,15 +15,15 @@
         left:0px;
         opacity: 0.8;
         overflow-y: hidden;
-    }
-    .container{
-        width: 500px;
-        .card {
-            border-color: red;
-            z-index: 10;
+        .container{
+            width: 500px;
+            .card {
+                border-color: red;
+                z-index: 10;
+                position: relative;
+            }
             position: relative;
-
         }
-        position: relative;
     }
+
 }
