--- a/src/components/FormBuilder/FormContent/FormContent.module.scss
+++ b/src/components/FormBuilder/FormContent/FormContent.module.scss
@@ -10,10 +10,38 @@
       flex-direction: column;
       align-items: stretch;
       width: 50%;
-  }
 
-  .submitButton {
-    width: 300px;
-    margin-left: auto;
-}
+      .question {
+        position: relative;
+        padding: 10px;
+        hr {
+            margin: 14px 0;
+        }
+        &:last-child hr {
+            display: none;
+        }
+
+        .editButton {
+            position: absolute;
+            top: 20px;
+            left: -115px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 50%;
+            padding: 5px;
+            cursor: pointer;
+        }
+
+        .deleteButton {
+          position: absolute;
+          top: 20px;
+          left: -75px;
+          background-color: #fff;
+          border: 1px solid #ccc;
+          border-radius: 50%;
+          padding: 5px;
+          cursor: pointer;
+      }
+    }
+  }
 }
