--- a/src/components/FormBuilder/FormContent/FormContent.module.scss
+++ b/src/components/FormBuilder/FormContent/FormContent.module.scss
@@ -10,6 +10,7 @@
       flex-direction: column;
       align-items: stretch;
       width: 50%;
+      min-width: 600px;
 
       .question {
         position: relative;
