--- a/src/components/FormBuilder/FormContent/FormContent.module.scss
+++ b/src/components/FormBuilder/FormContent/FormContent.module.scss
@@ -22,6 +22,12 @@
             display: none;
         }
 
+        .requiredBadge {
+          position: absolute;
+          left: -10px;
+          color: red;
+        }
+
         .editButton {
             position: absolute;
             top: 20px;
