Filling Page :: check applicant access before starting the stage

--- a/src/styles/StageFillingPage.module.scss
+++ b/src/styles/StageFillingPage.module.scss
@@ -13,4 +13,13 @@
     .startButton {
         margin-top: 20px;
     }
+
+    .errorText {
+        margin-top: 10px;
+        color: red;
+        bottom: 10px;
+        left: 0;
+        right: 0;
+        height: 24px;
+    }
 }
