--- a/src/components/FormBuilder/FormContent/FormContent.module.scss
+++ b/src/components/FormBuilder/FormContent/FormContent.module.scss
@@ -52,3 +52,16 @@
     }
   }
 }
+
+.finishModal {
+  width: 50%;
+  height: 50%;
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
