--- a/src/components/TestBuilder/TestContent/TestContent.module.scss
+++ b/src/components/TestBuilder/TestContent/TestContent.module.scss
@@ -34,6 +34,17 @@
                 padding: 5px;
                 cursor: pointer;
             }
+
+            .deleteButton {
+                position: absolute;
+                top: 35px;
+                left: -75px;
+                background-color: #fff;
+                border: 1px solid #ccc;
+                border-radius: 50%;
+                padding: 5px;
+                cursor: pointer;
+            }
         }
     }
     
