--- a/src/components/ShareFlowModal/ShareFlowModal.module.scss
+++ b/src/components/ShareFlowModal/ShareFlowModal.module.scss
@@ -1,10 +1,15 @@
-.shareLinkButtons {
+.shareButtons {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     margin-bottom: 10px;
-  
+
+    .feedbackText {
+      color: green;
+      margin-bottom: 10px;
+    }
+    
     & > *:not(:first-child) {
       margin-left: 10px;
     }
-  }
+}
