--- a/src/styles/Flows.module.scss
+++ b/src/styles/Flows.module.scss
@@ -50,18 +50,21 @@
             }
         }
     }
-    .flowList{
-        width: 100%;
-        padding: 10px;
+    .searchItem{
+        margin-top: 65px;
+        position:absolute;
+        right:20px; top:2px;
         .searchBar {
             margin-top: 5px;
             width: 300px;
             height: 40px;
             margin-left: 10px;
         }
-        .searchIcon{
-            margin-left: 815px;
-        }
+    }
+    .flowList{
+        width: 100%;
+        margin-top: 40px;
+        padding: 10px;
         .cardContainer {
             height: 44px;
             background: #FFFFFF;
