--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -20,9 +20,34 @@
   margin-right: 10px;
 }
 
-.title {
+.title1 {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: xx-large;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+.title2 {
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: large;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.p {
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: medium;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+.button {
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .user {
