FormBuilder :: Rightpanel save button feedback

--- a/src/components/FormBuilder/RightPanel/RightPanel.module.scss
+++ b/src/components/FormBuilder/RightPanel/RightPanel.module.scss
@@ -23,4 +23,15 @@
       margin-right: 10px;
       width: 30%;
     }
+
+    .th{
+      width: 80%;
+      .feedbackText1 {
+        color: green;
+      }
+      
+      .feedbackText2 {
+        color: red;
+      }
+    }
   }
