Submissions Page :: initial commit

--- a/src/components/FlowRenderer/StageCard/StageCard.module.scss
+++ b/src/components/FlowRenderer/StageCard/StageCard.module.scss
@@ -16,6 +16,13 @@
             border-top-color: $interviewColor;
         }
     }
+
+    &.submissionMode {
+        .card {
+            cursor: default;
+        }
+        width: 270px;
+    }
     position: relative;
 
     .builderIcon {
