--- a/src/components/ShareFlowModal/ShareFlowModal.module.scss
+++ b/src/components/ShareFlowModal/ShareFlowModal.module.scss
@@ -4,8 +4,12 @@
     align-items: flex-end;
     margin-bottom: 10px;
 
-    .feedbackText {
+    .successFeedbackText {
       color: green;
+      margin-bottom: 10px;
+    }
+    .unsuccessFeedbackText {
+      color: red;
       margin-bottom: 10px;
     }
     
