TestBuilder :: Fix save as button rendering error

--- a/src/components/TestBuilder/TestContent/TestContent.module.scss
+++ b/src/components/TestBuilder/TestContent/TestContent.module.scss
@@ -45,6 +45,16 @@
                 padding: 5px;
                 cursor: pointer;
             }
+            .saveButton {
+                position: absolute;
+                top: 70px;
+                left: -75px;
+                background-color: #fff;
+                border: 1px solid #ccc;
+                border-radius: 50%;
+                padding: 5px;
+                cursor: pointer;
+            }
         }
     }
     
