--- a/src/components/FlowBuilder/RightPanelContent/RightPanelContent.module.scss
+++ b/src/components/FlowBuilder/RightPanelContent/RightPanelContent.module.scss
@@ -1,3 +1,25 @@
 .contentContainer {
     padding-left: 10px;
+    overflow-y: auto;
+}
+
+.div {
+    margin-top:10px;
+}
+
+.deleteButton {
+    margin-left: 10px;
+}
+
+.input {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 4px;
+    padding-right: 10px;
+    text-align: left;
+    font-weight: normal;
+}
+
+.th1 {
+    width:90%;
 }
