--- a/src/components/FlowRenderer/FlowRenderer.module.scss
+++ b/src/components/FlowRenderer/FlowRenderer.module.scss
@@ -113,5 +113,9 @@
     &:hover {
       background-color: lighten(#666, 10%);
     }
+
+    &.active {
+      background-color: green;
+    }
   }
 }
