ApplicantTable :: add hide column functionality & header

--- a/src/components/ApplicantTable/ApplicantTable.module.scss
+++ b/src/components/ApplicantTable/ApplicantTable.module.scss
@@ -7,3 +7,11 @@
         height: unset;
     }
 }
+
+.header {
+    margin-bottom: 10px;
+    
+    & > *:not(:first-child) {
+        margin-left: 10px;
+    }
+}
