ApplicantTable :: add pagination functionality

--- a/src/components/ApplicantTable/ApplicantTable.module.scss
+++ b/src/components/ApplicantTable/ApplicantTable.module.scss
@@ -10,8 +10,16 @@
 
 .header {
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
     
     & > *:not(:first-child) {
         margin-left: 10px;
+    }
+}
+
+.pagination {
+    & > * {
+        min-height: 30px;
     }
 }
