FlowBuilder :: Save Feedback

--- a/src/components/FlowBuilder/RightPanelContent/RightPanelContent.module.scss
+++ b/src/components/FlowBuilder/RightPanelContent/RightPanelContent.module.scss
@@ -23,3 +23,19 @@
 .th1 {
     width:90%;
 }
+.saveButton {
+    margin-left: auto;
+    margin-right: 10px;
+    width: 30%;
+}
+
+.th{
+width: 90%;
+    .feedbackText1 {
+        color: green;
+    }
+
+    .feedbackText2 {
+        color: red;
+    }
+}
