FormBuilder :: Compnent titles and texts fixed

--- a/src/components/FormBuilder/RightPanel/NameEditor/NameEditor.module.scss
+++ b/src/components/FormBuilder/RightPanel/NameEditor/NameEditor.module.scss
@@ -5,7 +5,8 @@
     font-weight: 600;
 
     .textArea {
-        margin-top: 5px;
+        font-size: 1rem;
+        padding: 10px;
         line-height: 1;
     }
 }
