--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -1,106 +1,125 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  background-color: white;
-}
-
-.header {
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0 5vw;
-}
-
-.avatar {
-  height: 50px;
-  width: 50px;
-  border-radius: 100%;
-  margin-right: 10px;
-}
-
-.title1 {
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: xx-large;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-top: 5px;
-}
-
-.title2 {
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: large;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-top: 10px;
-}
-
-.p {
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: medium;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-}
-
-.button {
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-top: 10px;
-}
-
-.user {
-  display: flex;
-  align-items: center;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.addButton {
-  text-decoration: underline;
-  padding: 10px;
-}
-
-.deleteButton {
-  margin-left: 10px;
-}
-
-.popupBox {
-  position: fixed;
-  background: #00000050;
+.container { 
   width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-}
- 
-.box {
-  position: relative;
-  width: 70%;
-  margin: 0 auto;
-  height: auto;
-  max-height: 70vh;
-  margin-top: calc(100vh - 85vh - 20px);
-  background: #fff;
-  border-radius: 4px;
+  display: flex;
+  justify-content: center;
   padding: 20px;
-  border: 1px solid #999;
-  overflow: auto;
+
+  .card {
+      padding: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      width: 50%;
+      min-width: 600px;
+  
+
+    .header {
+      height: 70px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 0 5vw;
+    }
+
+    .avatar {
+      height: 50px;
+      width: 50px;
+      border-radius: 100%;
+      margin-right: 10px;
+    }
+
+    .title1 {
+      font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: xx-large;
+      margin-bottom: 10px;
+      margin-left: 10px;
+      margin-top: 5px;
+    }
+
+    .title2 {
+      font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: large;
+      margin-bottom: 10px;
+      margin-left: 10px;
+      margin-top: 10px;
+    }
+
+    .p {
+      font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: medium;
+      margin-left: 10px;
+      margin-bottom: 10px;
+      margin-left: 10px;
+    }
+    .user {
+      display: flex;
+      align-items: center;
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    .tablehr{
+      border: 0;
+      height: 0;
+      border-top: 1px solid rgba(0, 0, 0, 0.2);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    }
+
+    .addButton {
+      text-decoration: underline;
+      padding: 10px;
+    }
+
+    .deleteButton {
+      margin-left: 10px;
+    }
+
+    .popupBox {
+      position: fixed;
+      background: #00000050;
+      width: 100%;
+      height: 100vh;
+      top: 0;
+      left: 0;
+    }
+    
+    .box {
+      position: relative;
+      width: 70%;
+      margin: 0 auto;
+      height: auto;
+      max-height: 70vh;
+      margin-top: calc(100vh - 85vh - 20px);
+      background: #fff;
+      border-radius: 4px;
+      padding: 20px;
+      border: 1px solid #999;
+      overflow: auto;
+    }
+
+    .closeIcon {
+      content: 'x';
+      cursor: pointer;
+      position: fixed;
+      right: calc(15% - 30px);
+      top: calc(100vh - 85vh - 33px);
+      background: #ededed;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      line-height: 20px;
+      text-align: center;
+      border: 1px solid #999;
+      font-size: 20px;
+    }
+  }
 }
- 
-.closeIcon {
-  content: 'x';
-  cursor: pointer;
+
+.button{
+  padding: 14px;
+  margin: 14px;
   position: fixed;
-  right: calc(15% - 30px);
-  top: calc(100vh - 85vh - 33px);
-  background: #ededed;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  line-height: 20px;
-  text-align: center;
-  border: 1px solid #999;
-  font-size: 20px;
+  float: right;
+  right: 25%;
+  bottom: 0;
 }
