--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -65,6 +65,15 @@
       border-bottom: 1px solid rgba(255, 255, 255, 0.3);
     }
 
+    .table {
+      border-collapse: collapse;
+    }
+  
+    .tr {
+        border-top: 1px solid rgba(0, 0, 0, 0.2);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    }
+
     .addButton {
       text-decoration: underline;
       padding: 10px;
