--- a/src/components/ApplicantTable/ApplicantTable.module.scss
+++ b/src/components/ApplicantTable/ApplicantTable.module.scss
@@ -23,3 +23,16 @@
         min-height: 30px;
     }
 }
+
+.bodyCell {
+    cursor: pointer;
+    &.focused::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 2px solid #00bcd4;
+    }
+}
