--- a/src/styles/Submissions.module.scss
+++ b/src/styles/Submissions.module.scss
@@ -2,16 +2,21 @@
     height: 100%;
     display: flex;
 
-    .flowRenderer {
+    .leftPanel {
         height: 100%;
         padding: 20px;
         min-width: 240px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
 
-        -ms-overflow-style: none;  /* Internet Explorer 10+ */
-        scrollbar-width: none;  /* Firefox */
-        &::-webkit-scrollbar { 
-            display: none;  /* Safari and Chrome */
+        .flowRenderer {
+            flex: 1;
+            -ms-overflow-style: none;  /* Internet Explorer 10+ */
+            scrollbar-width: none;  /* Firefox */
+            &::-webkit-scrollbar { 
+                display: none;  /* Safari and Chrome */
+            }
         }
     }
 }
