--- a/src/components/FormBuilder/RightPanel/NameEditor/NameEditor.module.scss
+++ b/src/components/FormBuilder/RightPanel/NameEditor/NameEditor.module.scss
@@ -5,8 +5,7 @@
     font-weight: 600;
 
     .textArea {
-        font-size: 1rem;
-        padding: 10px;
+        margin-top: 5px;
         line-height: 1;
     }
 }
