--- a/src/styles/AdminConsole.module.scss
+++ b/src/styles/AdminConsole.module.scss
@@ -47,11 +47,15 @@
     border-collapse: collapse;
     width:100%;
     .tColumn1{
-        width: 30%
+        width: 30%;
+    }
+    .tColumn2{
+        width: 40%;
     }
 }
 
 .rowSelect{
+    margin-left: 10px;
 }
 
   
