--- a/src/components/AdminConsolePagination/AdminConsolePagination.module.scss
+++ b/src/components/AdminConsolePagination/AdminConsolePagination.module.scss
@@ -1,25 +1,22 @@
-.paginationButtons{
-    padding: 15px;
+.pagination {
+  display: inline-block;
+  bottom:0%;
 }
 
-.pagination {
-    display: inline-block;
-  }
-  
-  .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
-  
-  .pagination a.active {
-    background-color: #636463;
-    color: white;
-    border-radius: 5px;
-  }
-  
-  .pagination a:hover:not(.active) {
-    background-color: #ddd;
-    border-radius: 5px;
-  }
+.pagination button {
+  color: black;
+  float: left;
+  padding: 8px;
+  text-decoration: none;
+}
+
+.pagination button.active {
+  background-color: #1919a3;
+  color: white;
+  border-radius: 5px;
+}
+
+.pagination button:hover:not(.active) {
+  background-color: #ddd;
+  border-radius: 5px;
+}
