--- a/src/styles/AdminConsole.module.scss
+++ b/src/styles/AdminConsole.module.scss
@@ -47,20 +47,21 @@
     border-collapse: collapse;
     width:100%;
     .tColumn1{
-        width: 55%;
+        width: 70%;
     }
     .tColumn2{
         width: 20%;
     }
 }
 
-.td2{
-    bottom: 10px;
-    margin-top: 50%;
-}
-
 .rowSelect{
     margin-left: 10px;
+}
+
+.pageNumbers{
+    padding: 10px;
+    position:absolute;
+    right:40px;
 }
 
   
