TestBuilder :: Rightpanel save feedback

--- a/src/components/TestBuilder/RightPanel/RightPanel.module.scss
+++ b/src/components/TestBuilder/RightPanel/RightPanel.module.scss
@@ -22,4 +22,14 @@
     margin-right: 10px;
     width: 30%;
   }
+  .th{
+    width: 90%;
+      .feedbackText1 {
+          color: green;
+      }
+  
+      .feedbackText2 {
+          color: red;
+      }
+  }
 }
