--- a/src/styles/Flows.module.scss
+++ b/src/styles/Flows.module.scss
@@ -75,6 +75,11 @@
             align-items: center;
             padding: 0 20px;
             gap: 10px;
+
+            &.loading {
+                display: block;
+                padding-top: 5px;
+            }
             .flowCard {
                 display: flex;
                 align-items: center;
@@ -94,6 +99,13 @@
                     padding: 0 20px;
                     gap: 10px;
                 }
+            }
+        }
+
+        .loadingContent {
+            padding-top: 5px;
+            & > span {
+                height: 12px;
             }
         }
     }
