--- a/src/components/FormBuilder/FormContent/FormContent.module.scss
+++ b/src/components/FormBuilder/FormContent/FormContent.module.scss
@@ -1,53 +1,60 @@
-.container { 
+.container {
   width: 100%;
   display: flex;
   justify-content: center;
   padding: 20px;
 
   .questionList {
-      padding: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      width: 50%;
-      min-width: 600px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 50%;
+    min-width: 600px;
 
-      .question {
-        position: relative;
-        padding: 10px;
-        hr {
-            margin: 14px 0;
-        }
-        &:last-child hr {
-            display: none;
-        }
+    .question {
+      position: relative;
+      padding: 10px;
 
-        .requiredBadge {
-          position: absolute;
-          left: -10px;
-          color: red;
-        }
+      hr {
+        margin: 14px 0;
+      }
 
-        .editButton {
-            position: absolute;
-            top: 20px;
-            left: -115px;
-            background-color: #fff;
-            border: 1px solid #ccc;
-            border-radius: 50%;
-            padding: 5px;
-            cursor: pointer;
-        }
+      &:last-child hr {
+        display: none;
+      }
 
-        .deleteButton {
-          position: absolute;
-          top: 20px;
-          left: -75px;
-          background-color: #fff;
-          border: 1px solid #ccc;
-          border-radius: 50%;
-          padding: 5px;
-          cursor: pointer;
+      .requiredBadge {
+        position: absolute;
+        left: -10px;
+        color: red;
+      }
+
+      .editButton {
+        position: absolute;
+        top: 20px;
+        left: -115px;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 50%;
+        padding: 5px;
+        cursor: pointer;
+      }
+
+      .deleteButton {
+        position: absolute;
+        top: 20px;
+        left: -75px;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 50%;
+        padding: 5px;
+        cursor: pointer;
+      }
+
+      .submitButton {
+        width: 100%;
+        margin-top: 10px;
       }
     }
   }
