--- a/src/components/FlowRenderer/ConditionElement/Condition.module.scss
+++ b/src/components/FlowRenderer/ConditionElement/Condition.module.scss
@@ -9,8 +9,12 @@
   justify-content: center;
   box-sizing: border-box;
   position: relative;
-  cursor: pointer;
+  max-width: 200px;
 
+  &.editMode {
+    max-width: 420px;
+    cursor: pointer;
+  }
   .conditionBox {
     padding: 10px;
     background-color: white;
@@ -18,6 +22,10 @@
     border-radius: 20px;
     height: 40px;
     min-width: 40px;
+
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   .deleteIcon {
