FlowBuilder :: Right panel padding ui fix

--- a/src/components/FlowBuilder/RightPanelContent/RightPanelContent.module.scss
+++ b/src/components/FlowBuilder/RightPanelContent/RightPanelContent.module.scss
@@ -25,7 +25,7 @@
 }
 .saveButton {
     margin-left: auto;
-    margin-right: 10px;
+    margin-right: 15px;
     width: 30%;
 }
 
@@ -38,4 +38,8 @@ width: 90%;
     .feedbackText2 {
         color: red;
     }
+}
+
+.rowPadding{
+    padding-right:15px;
 }
