--- a/src/components/FlowBuilder/RightPanelContent/RightPanelContent.module.scss
+++ b/src/components/FlowBuilder/RightPanelContent/RightPanelContent.module.scss
@@ -21,8 +21,14 @@
 }
 
 .th1 {
-    width:90%;
+    margin-left: 10px;
+    width:80%;
 }
+
+.listItem:hover{
+    background:  rgba(0, 0, 0, 0.15);
+}
+
 .saveButton {
     margin-left: auto;
     margin-right: 15px;
