--- a/src/components/Picker/Picker.module.scss
+++ b/src/components/Picker/Picker.module.scss
@@ -3,8 +3,12 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  
+
   .list {
     flex-grow: 1;
+
+    .item {
+      display: flex;
+    }
   }
 }
