--- a/src/styles/AdminConsole.module.scss
+++ b/src/styles/AdminConsole.module.scss
@@ -27,6 +27,7 @@
             font-size: large;
             margin-bottom: 10px;
             margin-left: 10px;
+            margin-right: 10px;
             margin-top: 10px;
         }
 
