--- a/src/styles/Flows.module.scss
+++ b/src/styles/Flows.module.scss
@@ -62,10 +62,26 @@
         padding: 15px 10px;
         align-items: flex-end;
 
-        .searchItem {
-            margin-right: 10px;
-            background-color: #FFFFFF;
-            width: 250px;
+        .topBar {
+            padding-left: 10px;
+            padding-right: 25px;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+
+            .searchItem {
+                width: 250px;
+            }
+
+            .buttonContainer {
+                display: flex;
+
+                .button {
+                    width: 140px;
+                    margin-right: 10px;
+                }
+            }
+
         }
 
         .flowList {
@@ -114,6 +130,12 @@
                         font-weight: 600;
                         font-size: 15px;
                         color: black;
+                    }
+
+                    .cardDeleteButton {
+                        font-weight: 600;
+                        font-size: 15px;
+                        color: red;
                     }
                 }
             }
