--- a/src/components/TestBuilder/RightPanel/OptionsEditor/OptionsEditor.module.scss
+++ b/src/components/TestBuilder/RightPanel/OptionsEditor/OptionsEditor.module.scss
@@ -22,3 +22,15 @@
 .radio {
     padding: 5px !important;
 }
+
+.singleOption {
+    display: flex;
+
+    &:hover {
+        background-color: #f5f5f5;
+
+        & input {
+            background-color: #f5f5f5;
+        }
+    }
+}
